feat(decision): implement smart stock decision support engine